--- a/src/app/blog/posts-list/posts-list.component.html
+++ b/src/app/blog/posts-list/posts-list.component.html
@@ -1,5 +1,3 @@
 <div class="app-posts">
-    <div *ngFor='let post of posts'>
-        <div>{{post.title}}</div>
-    </div>
+    <app-post-card *ngFor='let post of posts' [post]='post' (click)='onClick(post.id)'></app-post-card>
 </div>
