feat(feature/blog): Toolbar now is fixed to top, removed direct state subscribtion.

--- a/src/app/blog/toolbar/toolbar.component.scss
+++ b/src/app/blog/toolbar/toolbar.component.scss
@@ -1,7 +1,10 @@
 .app-toolbar {
+    position: fixed;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: end;
     width: 100%;
+    left: 0px;
+    z-index: 1;
 }
