--- a/src/app/blog/dialog/dialog.component.html
+++ b/src/app/blog/dialog/dialog.component.html
@@ -1,11 +1,8 @@
-<div class='app-dialog-title' mat-dialog-title>
-    <h1>{{data.title }}</h1>
+<div class="app-dialog-header">
     <button mat-mini-fab mat-button color='primary' (click)="close()">
         <mat-icon>
             close
         </mat-icon>
     </button>
 </div>
-<div mat-dialog-content>
-    <p>What's your favorite animal?</p>
-</div>
+<app-dialog-content [data]='data | async'></app-dialog-content>
