--- a/src/app/blog/dialog/dialog.component.scss
+++ b/src/app/blog/dialog/dialog.component.scss
@@ -1,6 +1,7 @@
-.app-dialog-title {
+.app-dialog-header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
