feat(feature/blog) Added post page, Added comments support.

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
 <div class="app-blog" *ngIf='posts$ | async'>
     <mat-spinner *ngIf='postsLoading$ | async'></mat-spinner>
-    <app-posts-list (postSelect)='onPostSelect($event)' [posts]='posts$ | async'></app-posts-list>
+    <router-outlet></router-outlet>
 </div>
