--- a/src/app/blog/dialog-content/dialog-content.component.html
+++ b/src/app/blog/dialog-content/dialog-content.component.html
@@ -1,6 +1,12 @@
 <div class='app-dialog-title' mat-dialog-title>
-    <h1>{{data.title }}</h1>
+    <h1>{{post && post.title }}</h1>
 </div>
 <div mat-dialog-content>
-    <p>{{data.body}}</p>
+    <p class="app-post-body">{{post && post.body}}</p>
+    <h2>Comments: </h2>
+    <mat-card *ngFor='let comment of comments' class="app-comment-card">
+        <p>{{comment.name}}</p>
+        <p>{{comment.email}}</p>
+        <p>{{comment.body}}</p>
+    </mat-card>
 </div>
