--- a/src/app/blog/post-card/post-card.component.html
+++ b/src/app/blog/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="app-post-card">
+<mat-card [routerLink]='["/blog", "post", post.id]' class='app-post-card'>
     <mat-card-title>{{post.title}}</mat-card-title>
     <mat-card-content>
         <p>{{post.body}}</p>
