--- a/src/app/blog/posts-list/posts-list.component.html
+++ b/src/app/blog/posts-list/posts-list.component.html
@@ -1,3 +1,3 @@
 <div class="app-posts">
-    <app-post-card *ngFor='let post of posts' [post]='post' (click)='onClick(post.id)'></app-post-card>
+    <app-post-card *ngFor='let post of (posts$ | async)' [post]='post' ></app-post-card>
 </div>
