--- a/src/app/guest-book/guest-list/guest-list.component.html
+++ b/src/app/guest-book/guest-list/guest-list.component.html
@@ -5,7 +5,7 @@
     </mat-form-field>
     <table mat-table matSort [dataSource]='dataSource' class="mat-table">
         <ng-container matColumnDef='id'>
-            <th mat-header-cell *matHeaderCellDef mat-sort-header >Id</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
             <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.id}}</td>
         </ng-container>
 
@@ -31,14 +31,16 @@
 
         <ng-container matColumnDef='date'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.date | date:'yyyy-MM-dd'}} </td>
+            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.date | date:'yyyy-MM-dd'}}
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
         <tr mat-row *matRowDef='let row; columns: displayedColumns'></tr>
-
-        <tr class='mat-row' *matNoDataRow>
-            <td class='math-cell' colspan='4'>No data matching the filter "{{input.value}}"</td>
-        </tr>
+        <div *ngIf='guestsInvites.length'>
+            <tr class='mat-row' *matNoDataRow>
+                <td class='math-cell app-guest-list-no-data-row' colspan='4'>No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </div>
     </table>
 </div>
