feat(master): Added cursor pointer to guest book table row

--- a/src/app/guest-book/guest-list/guest-list.component.scss
+++ b/src/app/guest-book/guest-list/guest-list.component.scss
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
-.app-guest-list-no-data-row{
+.app-guest-list-no-data-row {
   padding-left: 30px;
+}
+
+.app-guest-list-mat-cell {
+  cursor: pointer;
 }
