--- a/src/app/guest-book/guest-list/guest-list.component.html
+++ b/src/app/guest-book/guest-list/guest-list.component.html
@@ -6,32 +6,32 @@
     <table mat-table matSort [dataSource]='dataSource' class="mat-table">
         <ng-container matColumnDef='id'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.id}}</td>
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.id}}</td>
         </ng-container>
 
         <ng-container matColumnDef='name'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.name}}</td>
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.name}}</td>
         </ng-container>
 
         <ng-container matColumnDef='surname'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.surname}}</td>
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.surname}}</td>
         </ng-container>
 
         <ng-container matColumnDef='email'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.email}}</td>
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.email}}</td>
         </ng-container>
 
         <ng-container matColumnDef='author'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.author}}</td>
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.author}}</td>
         </ng-container>
 
         <ng-container matColumnDef='date'>
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-            <td mat-cell *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.date | date:'yyyy-MM-dd'}}
+            <td mat-cell class='app-guest-list-mat-cell' *matCellDef='let invite' (click)='openDialog(invite.id)'>{{invite.date | date:'yyyy-MM-dd'}}
             </td>
         </ng-container>
 
