--- a/src/app/blog/post-page/post-page.component.scss
+++ b/src/app/blog/post-page/post-page.component.scss
@@ -1,12 +1,8 @@
 .app-post-page{
     width: auto;
-    padding: 100px 50px 50px;
+    padding: 0 50px;
 }
 
 .app-post-page-comments{
     margin-top: 30px;
-}
-
-.app-post-page-comment-card{
-    margin-bottom: 20px;
 }
